# cc-spacy-stanza

./: .gitignore  pyproject.toml
cc_spacy_stanza/: doc.json  ents_custom_term.py  ents_simple.py  ents_simple_zh.py  ents_simple_zh_2.py  ents_simple_zh_3.py  ner-1.py  ner-2.py  spacy.ipynb  spacy_zh.py
